--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
   <artifactId>mymodule</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <failOnMissingWebXml>false</failOnMissingWebXml>
   </properties>
- 
- 
  
  
  <dependencies>
@@ -27,6 +26,7 @@
 			<groupId>org.meveo</groupId>
 			<artifactId>meveo-api</artifactId>
 			<version>7.1.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 
 
